--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxt/test-utils-edge": "^3.0.0-rc.14-27808884.f1ae40f",
     "@nuxtjs/tailwindcss": "^6.1.3",
     "nuxt": "3.0.0-rc.13",
-    "nuxt-icon": "^0.1.7"
+    "nuxt-icon": "^0.1.7",
+    "vitest": "^0.16.0",
+    "vitest-dom": "^0.0.4"
   },
   "overrides": {
     "@vueuse/head": "v1.0.0-rc.14"
