--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,5 +4,8 @@
   "compilerOptions": {
     "esModuleInterop": true,
     "resolveJsonModule": true
-  }
+  },
+  "include": [
+    "./vitest-setup.ts"
+  ]
 }
