--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,18 +29,18 @@ jobs:
       - run: npm install
       - run: npm test
 
-  deploy:
-    machine:
-      enabled: true
+  # deploy:
+  #   machine:
+  #     enabled: true
 
-    working_directory: ~/resume-nuxt
+  #   working_directory: ~/resume-nuxt
 
-    steps:
-      - add_ssh_keys:
-        fingerprints:
-          - '47:0f:a8:3d:97:80:cf:80:8b:45:37:31:88:d5:50:ff'
-      - checkout
-      - run: git push git@github.com:jjjjjjonathan/resume-nuxt.git main:production
+  #   steps:
+  #     - add_ssh_keys:
+  #       fingerprints:
+  #         - '47:0f:a8:3d:97:80:cf:80:8b:45:37:31:88:d5:50:ff'
+  #     - checkout
+  #     - run: git push git@github.com:jjjjjjonathan/resume-nuxt.git main:production
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
@@ -50,9 +50,9 @@ workflows:
           filters:
             branches:
               ignore: production
-      - deploy:
-          filters:
-            branches:
-              ignore: production
-          requires:
-            - build
+      # - deploy:
+      #     filters:
+      #       branches:
+      #         ignore: production
+      #     requires:
+      #       - build
