--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "test": "vitest --run --reporter verbose --globals",
-    "test:watch": "vitest --reporter verbose --globals"
+    "test:watch": "vitest --reporter verbose --globals",
+    "reset": "npx nuxi clean && npx nuxi prepare"
   },
   "devDependencies": {
     "@nuxt/test-utils-edge": "^3.0.0-rc.14-27808884.f1ae40f",
