--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "reset": "npx nuxi clean && npx nuxi prepare"
   },
   "devDependencies": {
+    "@nuxt/content": "^2.2.2",
     "@nuxt/test-utils-edge": "^3.0.0-rc.14-27808884.f1ae40f",
     "@nuxtjs/tailwindcss": "^6.1.3",
     "nuxt": "3.0.0-rc.13",
