--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@nuxt/test-utils-edge": "^3.0.0-rc.14-27808884.f1ae40f",
     "@nuxtjs/tailwindcss": "^6.1.3",
+    "netlify-cli": "^12.2.7",
     "nuxt": "3.0.0-rc.13",
     "nuxt-icon": "^0.1.7",
     "vitest": "^0.16.0",
