--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,12 @@
 version: 2.1
 
+orbs:
+  browser-tools: circleci/browser-tools@1.1.0
+
 jobs:
   build:
     docker:
-      - image: cimg/node:16.14.2
+      - image: cimg/node:16.14.2-browsers
 
     working_directory: ~/resume-nuxt
 
